--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Proyecto_Final",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,6 +16,7 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.7",
@@ -24,5 +24,14 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Diego9714/Nova_Academy.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Diego9714/Nova_Academy/issues"
+  },
+  "homepage": "https://github.com/Diego9714/Nova_Academy#readme",
+  "description": ""
 }
