Se corrigieron los form de registro y login, y se adapto los niv acc y se termino el crud

--- a/copia.env
+++ b/copia.env
@@ -12,9 +12,16 @@ URL  =
 HOME_PATH = 
 COURSES_PATH = 
 CONTACT_PATH = 
-REGISTER_PATH = 
+REGISTER_PATH =
 LOGIN_PATH = 
 ACCOUNT_PATH = 
+GUEST_PATH = 
+REG_CURSOS_PATH = 
+ADM_ESTUDIANTES_PATH = 
+ERROR_PATH = 
+ERROR_ACCESS_PATH = 
+ERROR_404_PATH = 
+ENTERTAINMENT_PATH = 
 
 # Llave Jwt
 KEY = 
